# copapy

./: .flake8  .gitignore  CITATION.cff  README.md  build.bat  build.sh  build_ops_obj.sh  inspect.sh  pyproject.toml  setup.py  test.sh
.github/workflows/: build_docker_image.yml  build_images.yml  build_wheels.yml  ci.yml
docs/: Makefile  make.bat
docs/source/: LICENSE.md  compiler.md  conf.py  example_asm.md  example_asm.py  extract_section.py  generate_class_list.py  index.md  repo.md  stencil_doc.md  stencil_doc.py
docs/source/_static/: custom.css
notes/: crash_windows.md
src/: coparun_module.pyi
src/copapy/: __init__.py  _autograd.py  _basic_types.py  _binwrite.py  _compiler.py  _math.py  _matrices.py  _mixed.py  _nn.py  _quaternion.py  _stencils.py  _target.py  _tensors.py  _transfer_channel.py  _vectors.py  _version.py  backend.py  binwrite.py  filters.py  generate_stancils.py  generate_stencils.py  ops.c  stancils.c  stencil_db.py  stencils.c
src/coparun/: coparun.c  coparun_module.c  mem_man.c  mem_man.h  runmem.c  runmem.h
src/runner/: runmem2.c
stencils/: __sindf.c  aux_functions.c  generate_stencils.py  libm.h  sinf.c  sqrtf.c  stencil_helper.h  test.c  trigonometry.c
tests/: benchmark.py  test_ast_gen.py  test_ast_gen2.py  test_autograd.py  test_branching_stencils.py  test_comp_timing.py  test_compile.py  test_compile_aarch64.py  test_compile_armv7.py  test_compile_div.py  test_compile_math.py  test_coparun_module.py  test_coparun_module2.py  test_crash_win.py  test_dag_optimization.py  test_ext_ops.py  test_issue001_aarch64.py  test_issue001_x86_64.py  test_jit_decorator.py  test_math.py  test_matrix.py  test_multi_targets.py  test_ops.py  test_ops_aarch64.py  test_ops_armv6.py  test_ops_armv7.py  test_ops_armv7mthumb.py  test_ops_armv7thumb.py  test_ops_armv7thunb.py  test_ops_riscv32.py  test_ops_tricore.py  test_ops_x86.py  test_prog_flow.py  test_quaternion.py  test_readme_example.py  test_rev_kinematics.py  test_serial_channel.py  test_stencil.db.py  test_stencil_db.py  test_tensor_basic.py  (+2 more)
tools/: build.bat  build.sh  build_stencils.bat  clean_asm.py  create_asm.sh  create_stencil_doc.sh  crosscompile.sh  extract_code.py  generate_stencils.py  get_binaries.py  get_tag.sh  inspect.bat  inspect.sh  make_example.py  nativecompile.sh  test_example_code.sh  test_stencil_aux.sh  test_thumb_stancils.sh
tools/arm64_test/: Dockerfile
tools/build_container/: Dockerfile
tools/cross_compiler_unix/: Dockerfile  build_musl.sh  packobjs.sh
tools/tricore/: make_trc_example.py  run_qemu.py  run_test.bat
