[project]
name = "copapy"
version = "0.0.0"
authors = [
  { name="Nicolas Kruse", email="nicolas.kruse@nonan.net" },
]
description = "Copy-Patch Compiler"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-only"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  "pelfy>=1.0.4"
]

[project.urls]
Homepage = "https://github.com/nonannet/copapy"
Issues = "https://github.com/nonannet/copapy/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
copapy = ["obj/*.o", "py.typed"]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest"
]

[tool.mypy]
files = ["src", "tools", "stencils"]
strict = true
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "runner: requires to have an compiled runner executable"]

[tool.ruff]
lint.ignore = ["E501", "E226", "E265"]

# Equivalent to Flake8's "exclude"
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".conda",
    ".venv",
]

# "D" for dockstrings
lint.select = ["C", "E", "F", "W"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "E712"]
